--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -124,6 +124,9 @@
   <data name="iconPurpleBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconPurpleBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconEffectDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconEffectDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo_kklt_inverted" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_kklt_inverted.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,17 +136,20 @@
   <data name="iconCancel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconCancel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconGreenBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconGreenBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconOrangeBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconOrangeBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconRedBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconRedBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconCheckbox_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconCheckbox_checked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconBlackBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconBlackBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="iconPlayPause" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconPlayPause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconRowAddAfter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconRowAddAfter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,20 +160,14 @@
   <data name="iconPlay" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconPlay.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconBlueBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconBlueBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="iconChecked" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconChecked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconUnlocked_Green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconUnlocked_Green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconFilter.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="iconGreenBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconGreenBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="iconPlayPause" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconPlayPause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logo_kklt_inverted1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_kklt_inverted1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,17 +181,17 @@
   <data name="iconTime" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconTime.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconFastForward" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconFastForward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="iconCheckbox_checked2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconCheckbox_checked2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconFilter.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconRedBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconRedBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconScanNetwork_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconScanNetwork_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="iconZoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconZoom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconScanNetwork" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconScanNetwork.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,6 +202,9 @@
   <data name="iconScanNetwork_21" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconScanNetwork_21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconFastForward" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconFastForward.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconFilter2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconFilter1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -211,8 +214,8 @@
   <data name="iconOpen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconOpen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconEffectDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconEffectDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="iconBlueBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconBlueBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconOrangeBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconOrangeBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -228,6 +231,9 @@
   </data>
   <data name="iconPurpleBullet1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconPurpleBullet1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconZoom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconZoom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="iconBlueBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconBlueBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -250,10 +256,10 @@
   <data name="iconGreyBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconGreyBullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconCheckbox_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconCheckbox_checked.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icon_toggle-off" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Database\Icons\icon_toggle-off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="iconCheckbox_checked2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconCheckbox_checked2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icon_toggle-on" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Database\Icons\icon_toggle-on.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
